Rajout de Mickael dans la page des membres cotisants à Okiwi

--- a/bureau_et_membres.html
+++ b/bureau_et_membres.html
@@ -74,6 +74,7 @@
             <td>Jean-Baptiste Dusseaut</td>
             <td>Pascal Grange</td>
             <td>Guillaume Vincent</td>
+            <td>Mickael Ruellan</td>
          </tr>
       </table>
       </p>
