cotisation David Mouton

--- a/bureau_et_membres.html
+++ b/bureau_et_membres.html
@@ -75,6 +75,7 @@
             <td>Pascal Grange</td>
             <td>Guillaume Vincent</td>
             <td>Mickael Ruellan</td>
+            <td>David Mouton</td>
          </tr>
       </table>
       </p>
