--- a/index.html
+++ b/index.html
@@ -1,46 +1,75 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns="http://www.w3.org/1999/html">
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" xmlns="http://www.w3.org/1999/html"><!--<![endif]-->
     <head>
         <title>Site de l'association Okiwi</title>
 
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
         <meta name="description" content="Le site d'Okiwi Catalyseur d'évènements informatiques sur Bordeaux">
         <meta name="author" content="okiwi">
         <link rel="icon" type="image/png" href="img/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/normalise.css">
+        <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/foundation.min.css">
         <link rel="stylesheet" href="css/style.css" />
+        <script src="js/modernizr-2.6.2.min.js"></script>
     </head>
 
     <body>
-         
 
-      <header class="row">
-         <div id="title" class="large-5 columns text-center">
-            <img src="img/okiwi.png" alt="okiwi logo" style="width:64px; height:64px;" /> 
-            <h3>Association Okiwi</h3>
-            <h5 class="subheader">Catalyseur d'évènements informatiques</h5>
-         </div>
+    <header>
+        <div id="header_container" class="row">
+            <div id="menu_container" class="large-7 columns">
+                <div id="menu">
+                    <ul>
+                        <li><a href="https://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com">Agenda</a></li>
+                        <li><a href="#">L'association</a></li>
+                        <li><a href="https://groups.google.com/forum/?hl=fr&fromgroups#!forum/okiwi">Discussions</a></li>
+                        <li><a href="#">Evènements</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="title" class="large-3 columns">
+                <img src="img/okiwi.png" alt="okiwi logo" />
+                <h3>Association Okiwi</h3>
+                <h5 class="subheader">Catalyseur d'évènements informatiques</h5>
+            </div>
+            <div id="social" class="large-2 columns">
+                <ul>
+                    <li>
+                        <a href="http://twitter.com/okiwi_fr">
+                            <span><i class="foundicon-twitter"></i></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/u/0/communities/110003801009461308694">
+                            <span><i class="foundicon-google-plus"></i></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/organizations/okiwi">
+                            <span><i class="foundicon-github"></i></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
-         <div id="menu" class="large-6 columns left">
-             <ul class="inline-list right">
-                 <li class="current"><a href="#">Accueil</a></li>
-                 <li><a href="#">Agenda</a></li>
-                 <li><a href="#">L'association</a></li>
-                 <li><a href="#">Discussions</a></li>
-                 <li><a href="#">Evènements</a></li>
-             </ul>
-         </div>
-
-          <div id="social" class="large-1 columns">
-              <a href="http://twitter.com/okiwi_fr" class="twitter"><span>Twitter</span></a>
-              <a href="https://plus.google.com/u/0/events/cqotp15cf2eso0rr8gc0uit8mak/101137288862468153673" class="googleplus"><span>Google +</span></a>
+      <div  id="alert_container" class="row">
+        <div class="large-12 columns">
+            <div data-alert class="alert-box success">
+                <span id="futur_event">
+                </span>
+                <a href="#" id="futur_event_url">plus d'information</a>
+            </div>
           </div>
-      </header>
-
-      <div id="container" class="row">
+      </div>
+      <div class="row">
           <div class="large-8 columns right text-justify">
               <h3>Qu'est ce que Okiwi?</h3>
               <hr>
@@ -48,10 +77,10 @@
                   Okiwi est une communauté ouverte de praticiens en informatique située à Bordeaux.
                   Ouverte parce que nous ne donnons pas de limite à notre curiosité.
                   L’activité de l’association dépendra de ce que chacun y apportera.
-                  <br>
+                  <br><br>
                   Nous organisons entre autre:
               </p>
-              <div class="row text-justify">
+              <div class="row text-left">
                   <div class="large-6 columns">
                       <p>Des <a href="#"><b>coding dojo</b></a>,
                       sessions amusantes et intenses pendant lesquelles des développeurs améliorent leurs compétences en programmation.</p>
@@ -72,7 +101,7 @@
               </div>
           </div>
           <div id="memo" class="large-4 columns left text-justify">
-            <p> Okiwi existe depuis 4 ans. La communauté décide de contribuer bénévolement au développement de l'association, en y consacrant du temps et de l'energie.
+            <p> Okiwi existe depuis 7 ans. La communauté décide de contribuer bénévolement au développement de l'association, en y consacrant du temps et de l'energie.
                 De ce fait, l'ensemble des activités de l'association sont gratuites, et aucune cotisation n’est nécessaire pour y participer.
                 <br>Néanmoins il est possible de soutenir l'association et d'adhérer pour devenir membre cotisant.
             </p>
@@ -82,10 +111,57 @@
       <div class="row">
           <div id="footer" class="large-12 columns text-center">
 
-          <p>Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a href="https://github.com/okiwi">code</a> produit par Okiwi est sous licence WTFPL
-          (<b>Do What the Fuck You Want to Public License</b>)
+          <p>
+              Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a href="https://github.com/okiwi">code</a>
+              produit par Okiwi est sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
           </p>
           </div>
       </div>
     </body>
+
+<script src="js/jquery-1.9.1.min.js"></script>
+<script>
+    function get_date_string_format(startDate, endDate) {
+        var month_names = new Array("janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre");
+
+        var curr_date = startDate.getDate();
+        var curr_month = month_names[startDate.getMonth()]; //Months are zero based
+        var curr_year = startDate.getFullYear();
+        return curr_date + " " + curr_month + " " + curr_year
+                + " de " + startDate.getHours() +"h"+startDate.getMinutes()
+                + " à " + endDate.getHours() +"h"+endDate.getMinutes();
+    }
+
+    function get_url(links) {
+        var url = '';
+        for(var i= 0; i < links.length; i++){
+            if (links[i].type == "text/html"){
+                url = links[i].href + '&ctz=Europe/Paris';
+            }
+        }
+        return url;
+    }
+
+    $.ajax({
+        type: 'GET',
+        url: 'http://www.google.com/calendar/feeds/emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com/public/full?alt=json&orderby=starttime&max-results=1&singleevents=true&sortorder=ascending&futureevents=true',
+        dataType: 'json',
+        success: function(data) {
+            var event = data.feed.entry[0];
+            var title = event.title.$t;
+            var startTime = new Date(event.gd$when[0].startTime);
+            var endTime = new Date(event.gd$when[0].endTime);
+            var date_string = get_date_string_format(startTime, endTime);
+            var link = get_url(event.link);
+
+            $('#futur_event').text("Prochain évènement: " + title + " le " + date_string);
+            $("#futur_event_url").attr("href", link);
+            $('#alert_container').css("display", "block");
+        },
+        error: function() {
+            console.log('Error loading Okiwi Google Agenda');
+        }
+    });
+</script>
+
 </html>
