add member page

--- a/dons_et_cotisation.html
+++ b/dons_et_cotisation.html
@@ -1,60 +1,154 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="fr-FR">
+<!DOCTYPE html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" xmlns="http://www.w3.org/1999/html"><!--<![endif]-->
 <head>
-   <title>Dons et cotisation</title>
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-   <meta name="description" content="L'association Okiwi est une communauté de praticiens en informatique située à Bordeaux. Nos buts principaux sont le partage d'expérience, le co-apprentissage, et l'initiation de projets libres et utiles à tous." />
-   <meta name="keywords" content="okiwi, association, logiciel, libre, informatique, bordeaux, ateliers, coding dojo, programmation, communauté, agile" />
-   <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Don et cotisation</title>
+
+    <meta charset="utf-8">
+    <meta name="description" content="Le site d'Okiwi Catalyseur d'évènements informatiques sur Bordeaux">
+    <meta name="author" content="okiwi">
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
+
 <body>
-      <div id="entete">
-      <img src="okiwi.png" alt="Logo Okiwi" />
-      <a href="index.html"><h1>Association Okiwi</h1></a>
-      <h3 id="slogan">Catalyseur d'évènements informatiques</h3>
 
-      <div class="liens">
-      <a href="http://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g%40group.calendar.google.com&ctz=Europe/Paris">Agenda</a><br>
-      <a href="http://www.okiwi.org/blogs/">Blogs</a><br>
-      <a href="http://groups.google.fr/group/okiwi">Discussions</a><br>
-      <a href="https://github.com/organizations/okiwi">Github</a><br>
-      </div>
+<header>
+    <div id="header_container" class="row">
+        <div id="menu_container" class="large-7 columns">
+            <div id="menu">
+                <ul>
+                    <li><a href="https://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com">Agenda</a></li>
+                    <li><a href="association.html">L'association</a></li>
+                    <li><a href="https://groups.google.com/forum/?hl=fr&fromgroups#!forum/okiwi">Discussions</a></li>
+                    <li><a href="evenements.html">Evènements</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="title" class="large-3 columns">
+            <img src="img/okiwi.png" alt="okiwi logo" />
+            <h3>Association Okiwi</h3>
+            <h5 class="subheader">Catalyseur d'évènements informatiques</h5>
+        </div>
+        <div id="social" class="large-2 columns">
+            <ul>
+                <li>
+                    <a href="http://twitter.com/okiwi_fr">
+                        <span><i class="foundicon-twitter"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://plus.google.com/u/0/communities/110003801009461308694">
+                        <span><i class="foundicon-google-plus"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/organizations/okiwi">
+                        <span><i class="foundicon-github"></i></span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
 
-      <div class="liens">
-      <a href="bureau_et_membres.html">Bureau et membres</a><br>
-      <a href="dons_et_cotisation.html">Dons et cotisation</a><br>
-      <a href="status.html">Les statuts</a><br>
-      </div>
+<div class="row">
+    <div id="don" class="large-4 columns left text-justify">
+        <b><u>Etat des finances:</u></b>
+        <div class="row">
+            <div class="large-6 columns">
+                <div class="progress alert"><span class="meter" style="width: 0%">0%</span></div>
+            </div>
+            <div class="large-6 columns">
+                de 250€
+            </div>
+            <div class="large-12 columns">
+                frais fixes d'Okiwi sur l'année 2012
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="large-10 columns">
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="P9FNLXH9S5KUW">
+                    <input type="hidden" name="on0" value="Cotisation annuelle"><b><u>Cotisation annuelle:</u></b>
+                    <br>
+                    <select name="os0">
+                        <option value="à partir de">à partir de €10,00 EUR</option>
+                        <option value="autre montant">autre montant €20,00 EUR</option>
+                        <option value="autre montant">autre montant €50,00 EUR</option>
+                    </select>
 
-      <div class="liens">
-      <a href="http://agiletourbordeaux.okiwi.org/">Agile Tour Bordeaux</a><br>
-      <a href="coding_dojo.html">Coding dojo</a><br>
-      <a href="http://communaute.okiwi.org/">Social</a><br>
-      </div>
-   </div>
-   <div id="corp_de_page">
+                    <input type="hidden" name="currency_code" value="EUR">
+                    <input class="button alert tiny" type="submit" name="submit" alt="Devenir membre cotisant en ligne!" value="Devenir membre cotisant en ligne"/>
+                </form>
+                ou envoyer un chèque à l'adresse:
+                <br><b>Association Okiwi</b>
+                <br>34 Rue de Preignac
+                <br>33800 Bordeaux
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="large-12 columns">
+                <b><u>Faire un don :</u></b>
+            </div>
+        </div>
 
-      <h3>Dons</h3>
-      <p>
-         Depuis mars 2012, le système de micro paiement flattr est en place. Vous pouvez aider financièrement au développement de l'association.
-         Flattr est un système de micro-paiement et vous permet de répartir une somme mensuelle entre différents sites participants.
-      </p>		
-      <p>
-         <a href="http://flattr.com/thing/566741/okiwi" target="_blank">
-         <img src="flattr-badge-large.png" alt="Flattr Okiwi" title="Flattr Okiwi" border="0" /></a>
-      </p>	
-      <h3>Cotisation</h3>
-      <p>     
-         En vertu de l’assemblée générale du 1 mars 2011 :<br>
-         <ul>
-            <li>la cotisation annuelle est à partir de 10 €</li>
-            <li>la cotisation pourra être exceptionnellement abaissée sur simple demande</li>
-         </ul>
+        <div class="row">
+            <div class="small-6 large-6 columns">
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="TPYAFNHNYEMWA">
+                    <input style="width: 37px; height: 23px; " type="image" src="https://www.paypal.com//fr_FR/i/logo/PayPal_mark_37x23.gif" border="0" name="submit" alt="PayPal - la solution de paiement en ligne la plus simple et la plus sécurisée !">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </div>
+            <div class="small-6 large-6 columns">
+                <a href="http://flattr.com/thing/566741/okiwi" target="_blank">
+                    <img src="flattr-badge-large.png" alt="Flattr Okiwi" border="0" />
+                </a>
+            </div>
+        </div>
 
-         Nous réfléchissons à un moyen pour permettre de régler la cotisation en ligne.
-         <strong><h4>NB : aucune cotisation n’est nécessaire pour participer aux activités de l’association.</h4></strong><br>
-      </p>
-   </div>
+
+
+    </div>
+    <div class="large-8 columns right text-justify">
+        <h3>A quoi servent les dons et les cotisations?</h3>
+        <hr>
+
+        Les dons et les cotisations permettent à Okiwi dans un premier temps de payer ces frais fixes comme:
+        <br>- l'assurance responsatibilité civile qui nous permet d'organiser autant d'évènements que nous souhaitons
+        <br>- le nom de domaine okiwi.org
+        <br>- le serveur mail
+        <br><br>Ils permettent aussi à Okiwi de rendre l'ensemble des évènements gratuits !
+    </div>
+</div>
+<div class="row">
+    <div id="footer" class="large-12 columns text-center">
+
+        <p>
+            Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a href="https://github.com/okiwi">code</a>
+            produit par Okiwi est sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
+        </p>
+    </div>
+</div>
+<script src="js/jquery-1.9.1.min.js"></script>
+<script>
+    $("#title").click(
+        function(){window.location = "/";}
+    );
+</script>
 </body>
-</html>
 
+</html>
