fixbug with paypal form

--- a/dons_et_cotisation.html
+++ b/dons_et_cotisation.html
@@ -85,7 +85,7 @@
                     <select name="os0">
                         <option value="à partir de">à partir de €10,00 EUR</option>
                         <option value="autre montant">autre montant €20,00 EUR</option>
-                        <option value="autre montant">autre montant €50,00 EUR</option>
+                        <option value="dernier montant">autre montant €50,00 EUR</option>
                     </select>
 
                     <input type="hidden" name="currency_code" value="EUR">
