--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div data-alert class="alert-box success">
                 <span id="futur_event">
                 </span>
-                <a href="#" id="futur_event_url">plus d'information</a>
+                <a href="#" id="futur_event_url">plus d'informations</a>
             </div>
           </div>
       </div>
