fixbug github link in menu

--- a/evenements.html
+++ b/evenements.html
@@ -19,7 +19,7 @@
          <a href="http://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g%40group.calendar.google.com&ctz=Europe/Paris">Agenda</a><br>
          <a href="http://www.okiwi.org/blogs/">Blogs</a><br>
          <a href="http://groups.google.fr/group/okiwi">Discussions</a><br>
-         <a href="https://github.com/organizations/okiwi">Github</a><br>
+         <a href="https://github.com/okiwi">Github</a><br>
       </div>
 
       <div class="liens">
