--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/organizations/okiwi">
+                        <a href="https://github.com/okiwi">
                             <span><i class="foundicon-github"></i></span>
                         </a>
                     </li>
