--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://pluscoding_dojo.google.com/u/0/communities/110003801009461308694">
+                        <a href="https://plus.google.com/u/0/communities/110003801009461308694">
                             <span><i class="foundicon-google-plus"></i></span>
                         </a>
                     </li>
