ajout du boutton d'inscription et plus d'informations sur la page geek_camp

--- a/geek_camp/index.html
+++ b/geek_camp/index.html
@@ -80,11 +80,14 @@
 					<img src="/img/GeekCamp-Ruffiac-2013-0.4.2.png" alt="affiche Geek Camp 2013" />
 				</div>
 			</div>
-          <div id="memo" class="large-4 columns left text-justify">
+          <div id="memo" class="large-4 columns left text-center">
             <p>Geek Camp - un rencontre informatique hors norme, à la campagne entre geeks
             <img src="img/coding_dojo_small.jpg">
             </p>
             <a href="../dons_et_cotisation.html" class="success label">Faire un don ou devenir membre cotisant</a>
+              <br><br>
+            <a href="http://www.yuticket.com/association-okiwi/e0123e12-c6bc-4ddc-bb8d-fc49a356311d-geek-camp-2013.html" class="button small radius">inscription</a>
+            <a href="https://groups.google.com/forum/?hl=fr&fromgroups#!forum/okiwi" class="button small radius">plus d'informations?</a>
           </div>
       </div>
       <div class="row">
