--- a/geek_camp/index.html
+++ b/geek_camp/index.html
@@ -27,7 +27,7 @@
                 <div id="menu">
                     <ul>
                         <li><a href="https://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com">Agenda</a></li>
-                        <li><a href="association.html">L'association</a></li>
+                        <li><a href="http://okiwi.org/association.html">L'association</a></li>
                         <li><a href="https://groups.google.com/forum/?hl=fr&fromgroups#!forum/okiwi">Discussions</a></li>
                         <!--<li><a href="#">Evènements</a></li>-->
                     </ul>
