mise à jour de l'affiche pour agrandir le logo de notre partenaire Agile France

--- a/geek_camp/index.html
+++ b/geek_camp/index.html
@@ -77,7 +77,7 @@
             </p>
               <div class="row text-left">
 					<a href="/geek_camp/2013/"><h1>Premiere edition - 27,28 et 29 Septembre 2013 !</h1></a>
-					<img src="/img/GeekCamp-Ruffiac-affiche.png" alt="affiche Geek Camp 2013" />
+					<img src="/img/affiche_geek_camp.jpg" alt="affiche Geek Camp 2013" />
 				</div>
 			</div>
           <div id="memo" class="large-4 columns left text-center">
