customisation bloc geek camp

--- a/index.html
+++ b/index.html
@@ -59,8 +59,15 @@
             </div>
         </div>
     </header>
-
-      <div  id="alert_container" class="row">
+      <div id="bloc_geek_camp" class="row">
+        <div class="large-12 columns">
+            <div data-alert class="alert-box alert">
+                GEEK CAMP Week End. 27,28 et 29 septembre. Présentations, lightning talks, séances de code, discussions...
+                <a href="/geek_camp/">plus d'informations</a>
+            </div>
+          </div>
+      </div>
+      <div id="alert_container" class="row">
         <div class="large-12 columns">
             <div data-alert class="alert-box success">
                 <span id="futur_event">
