--- a/index.html
+++ b/index.html
@@ -59,14 +59,6 @@
             </div>
         </div>
     </header>
-      <div id="bloc_geek_camp" class="row">
-        <div class="large-12 columns">
-            <div data-alert class="alert-box alert">
-                GEEK CAMP Week End. 27,28 et 29 septembre. Présentations, lightning talks, séances de code, discussions...
-                <a href="/geek_camp/">plus d'informations</a>
-            </div>
-          </div>
-      </div>
       <div id="alert_container" class="row">
         <div class="large-12 columns">
             <div data-alert class="alert-box success">
@@ -89,7 +81,7 @@
               </p>
               <div class="row text-left">
                   <div class="large-6 columns">
-                      <p>Des <a href="#"><b>coding dojo</b></a>,
+                      <p>Des <a href="coding_dojos.html"><b>coding dojo</b></a>,
                       sessions amusantes et intenses pendant lesquelles des développeurs améliorent leurs compétences en programmation.</p>
                   </div>
 
