--- a/index.html
+++ b/index.html
@@ -1,172 +1,276 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" xmlns="http://www.w3.org/1999/html"><!--<![endif]-->
-    <head>
-        <title>Site de l'association Okiwi</title>
+---
+layout: default
+title: Okiwi
+---
 
-        <meta charset="utf-8">
-        <meta name="description" content="Le site d'Okiwi Catalyseur d'évènements informatiques sur Bordeaux">
-        <meta name="author" content="okiwi">
-        <link rel="icon" type="image/png" href="img/favicon.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div id="vitrine" class="row">
+    <div class="col-lg-12">
+        <div class="alert alert-success">
+            <strong><i class="fa fa-bullhorn fa-lg"></i> Prochain évènement:</strong><br/>
+            <i id="icone-chargement" class="fa fa-spinner fa-spin"></i>
+            <span id="message"></span>
+            <br/><a id="event_link">plus d'information</a>
+        </div>
+    </div>
+</div>
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/foundation.min.css">
-        <link rel="stylesheet" href="css/style.css" />
-        <script src="js/modernizr-2.6.2.min.js"></script>
-    </head>
+<div class="row">
+    <div class="col-lg-4">
+        <br/>
+        <br/>
 
-    <body>
+        <div class="jumbotron text-center">
+            <p>
+                Okiwi existe depuis {{site.data.okiwi.age}} ans. La communauté décide de contribuer bénévolement au
+                développement de
+                l'association. De ce fait, l'ensemble des activités de l'association sont
+                <strong>gratuites</strong>.
+                Néanmoins il est possible de soutenir l'association et d'adhérer pour devenir membre cotisant. </p>
 
-    <header>
-        <div id="header_container" class="row">
-            <div id="menu_container" class="large-7 columns">
-                <div id="menu">
-                    <ul>
-                        <li><a href="https://www.google.com/calendar/embed?src=emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com">Agenda</a></li>
-                        <li><a href="association.html">L'association</a></li>
-                        <li><a href="https://groups.google.com/forum/?hl=fr&fromgroups#!forum/okiwi">Discussions</a></li>
-                        <!--<li><a href="#">Evènements</a></li>-->
-                    </ul>
+            <p><a href="/dons_et_cotisations/" class="btn btn-success"><i class="fa fa-thumbs-up fa-lg"></i> Soutenir
+                Okiwi</a></p>
+        </div>
+    </div>
+    <div class="col-lg-8">
+        <div class="row">
+            <div class="col-sm-12">
+
+                <div class="page-header">
+                    <h1>Qu'est ce que Okiwi?</h1>
                 </div>
+
+                <p>Okiwi est une communauté ouverte de praticiens en informatique située à Bordeaux. Ouverte parce
+                    que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce
+                    que chacun y apportera.</p>
+
+                <p>Nous organisons entre autre: </p>
             </div>
-            <div id="title" class="large-3 columns">
-                <img src="img/okiwi.png" alt="okiwi logo" />
-                <h3>Association Okiwi</h3>
-                <h5 class="subheader">Catalyseur d'évènements informatiques</h5>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><i class="fa fa-keyboard-o fa-lg"></i> Coding Dojos</h3>
+
+                <p>Les coding dojos sont des sessions amusantes et intenses pendant lesquelles des développeurs
+                    améliorent
+                    leurs compétences en programmation. Okiwi organise 2 coding dojos par mois. <a href="#coding-dojo"> En
+                        savoir plus...</a></p>
+
             </div>
-            <div id="social" class="large-2 columns">
+            <div class="col-sm-6">
+                <h3><i class="fa fa-beer fa-lg"></i> Apéros</h3>
+
+                <p>
+                    Quoi de mieux qu'une bière pour discuter des sujets qui nous
+                    passionne ? Une fois par mois, on se retrouve autour d'une bière sur Bordeaux.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>L'Agile Tour Bordeaux</h3>
+
+                <p>
+                    <a href="http://agiletourbordeaux.okiwi.org/" target="_blank">L'Agile Tour Bordeaux</a> est une étape de <a href="http://agiletour.org" target="_blank">l'Agile Tour</a>, une série
+                    d’événements à but non lucratif,
+                    qui vise principalement à promouvoir massivement l'Agilité. Okiwi organise depuis maintenant 5
+                    ans l'Agile Tour Bordeaux.
+                </p>
+
+            </div>
+            <div class="col-sm-6">
+                <h3>Global day of code retreat</h3>
+
+                <p>
+                    Le <a href="http://globalday.coderetreat.org/">Global day of code retreat</a> est une journée durant laquelle des développeurs se
+                    concentre sur
+                    les fondamentaux du développement et du design logiciel. Okiwi est l'organisateur officiel de
+                    l'édition Bordelaise du Global Day of Code retreat depuis maintenant 3 ans !
+                </p>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><i class="fa fa-puzzle-piece fa-lg"></i> Ateliers</h3>
+
+                <p>
+                    Des ateliers divers et variés, sur l'agilité, la communication, ... . Vous voulez organiser un
+                    atelier? Proposer l'idée sur les <a href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">canaux de discussions Okiwi</a>
+                </p>
+
+            </div>
+            <div class="col-sm-6">
+                <h3>Geek Camp week end</h3>
+
+                <p>
+                    Le Geek Camp week end est une rencontre entre informaticiens. Présentations, lightning talks,
+                    séances de code, discussions, bières et barbecues étaient au programme de l'édition 2013 du Geek
+                    Camp
+                    Week End !
+                </p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-4">
+        <br/>
+        <br/>
+
+        <div class="jumbotron text-center">
+            <p>
+                Des <b>coding dojos</b>, un entrainement de programmation sans pression ni stress, pour s’améliorer en
+                s'amusant.
+
+            </p>
+            <img src="/img/coding_dojo_small.jpg" id="thumbnail-coding-dojo">
+
+            <h2>Des questions ?</h2>
+
+            <p><a href="mailto:contact@okiwi.org">contact@okiwi.org</a>
+                <br/>
+                <a href="https://twitter.com/okiwi_fr">Twitter @okiwi_fr</a>
+                <br/>
+                <a href="https://groups.google.com/forum/?hl=fr&fromgroups#!forum/okiwi">Google group Okiwi</a></p>
+        </div>
+    </div>
+    <div class="col-lg-8">
+        <div class="row">
+            <div class="col-lg-12">
+
+                <div class="page-header">
+                    <h1 id="coding-dojo">Qu'est ce qu'un Coding Dojo?</h1>
+                </div>
+
+                <p>Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeurs
+                    améliorent leurs
+                    compétences en programmation.
+                    Le principe est simple: on prend un exercice de programmation simple, on choisit un langage, et on
+                    essaie de coder
+                    une solution en respectant les 4 règles du design simple de Kent Beck :
+                </p>
                 <ul>
-                    <li>
-                        <a href="http://twitter.com/okiwi_fr">
-                            <span><i class="foundicon-twitter"></i></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/u/0/communities/110003801009461308694">
-                            <span><i class="foundicon-google-plus"></i></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/okiwi">
-                            <span><i class="foundicon-github"></i></span>
-                        </a>
-                    </li>
+                    <li>Passer tous les tests</li>
+                    <li>Aucune duplication de code</li>
+                    <li>Révéler les intentions par le code, être très attentif au nommage</li>
+                    <li>Réduire le nombre de classes et de méthodes</li>
                 </ul>
             </div>
         </div>
-    </header>
-      <div id="alert_container" class="row">
-        <div class="large-12 columns">
-            <div data-alert class="alert-box success">
-                <span id="futur_event">
-                </span>
-                <a href="#" id="futur_event_url">plus d'informations</a>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><i class="fa fa-github fa-lg"></i> Katas</h3>
+
+                <p>Les <a href="http://codingdojo.org/cgi-bin/wiki.pl?KataCatalogue"><b>katas</b></a> sont des exercices
+                    de programmation avec une problématique spécifique à résoudre.
+                    Souvent assez simple au début, ils sont plus difficiles à terminer.
+                    <br>
+                    Chacun des katas effectués par Okiwi sont disponible sur <a
+                            href="https://github.com/okiwi">github</a>.
+                </p>
+
             </div>
-          </div>
-      </div>
-      <div class="row">
-          <div class="large-8 columns right text-justify">
-              <h3>Qu'est ce que Okiwi?</h3>
-              <hr>
-              <p>
-                  Okiwi est une communauté ouverte de praticiens en informatique située à Bordeaux.
-                  Ouverte parce que nous ne donnons pas de limite à notre curiosité.
-                  L’activité de l’association dépendra de ce que chacun y apportera.
-                  <br><br>
-                  Nous organisons entre autre:
-              </p>
-              <div class="row text-left">
-                  <div class="large-6 columns">
-                      <p>Des <a href="coding_dojos.html"><b>coding dojo</b></a>,
-                      sessions amusantes et intenses pendant lesquelles des développeurs améliorent leurs compétences en programmation.</p>
-                  </div>
+            <div class="col-sm-6">
+                <h3><i class="fa fa-thumbs-up fa-lg"></i> Bonnes pratiques</h3>
 
-                  <div class="large-6 columns">
-                      <p>Des <a href="#"><b>ateliers</b></a> divers et variés, sur l'agilité, la communication, ...</p>
-                  </div>
-              </div>
-              <div class="row text-left">
-                  <div class="large-6 columns">
-                      <p>L'<a href="http://agiletourbordeaux.okiwi.org/"><b>Agile Tour Bordeaux</b></a> depuis maintenant 4 ans.</p>
-                  </div>
+                <p>
+                    Les <a href="http://fr.wikibooks.org/wiki/Programmation_XP_Pratiques"><b>bonnes practiques</b></a>
+                    de programmation que l'on respecte sont en outre le TDD, les principes <a
+                        href="http://philippe.developpez.com/articles/SOLIDdotNet/">SOLID</a> et <span
+                        title="Don't Repeat Yourself">DRY</span> et la programmation en binôme.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>Le lieu</h3>
 
-                  <div class="large-6 columns">
-                      <p>Le<a href="#"><b> global day of code retreat</b></a> et bien d'autres ateliers techniques</p>
-                  </div>
-              </div>
-          </div>
-          <div id="memo" class="large-4 columns left text-justify">
-            <p> Okiwi existe depuis 8 ans. La communauté décide de contribuer bénévolement au développement de l'association, en y consacrant du temps et de l'energie.
-                De ce fait, l'ensemble des activités de l'association sont gratuites, et aucune cotisation n’est nécessaire pour y participer.
-                <br>Néanmoins il est possible de soutenir l'association et d'adhérer pour devenir membre cotisant.
-            </p>
-            <a href="dons_et_cotisation.html" class="success label">Faire un don ou devenir membre cotisant</a>
-          </div>
-      </div>
-      <div class="row">
-          <div id="footer" class="large-12 columns text-center">
+                <p>Les <b>séances</b> ont lieu deux fois par mois, le deuxième et quatrième lundi de chaque mois.
+                    Actuellement les deux séances ont lieu chez <a href="http://www.coolworking.fr/">Coolworking</a> en
+                    plein centre ville de Bordeaux, de 18h30 à 20h30.</p>
 
-          <p>
-              Le site <a href="http://okiwi.org">okiwi.org</a> ainsi que le <a href="https://github.com/okiwi">code</a>
-              produit par Okiwi est sous licence <a href="http://www.wtfpl.net/txt/copying/">WTFPL</a>
-          </p>
-          </div>
-      </div>
-    </body>
+            </div>
+        </div>
 
-<script src="js/jquery-1.9.1.min.js"></script>
-<script>
-    $("#title").click(
-            function(){window.location = "/";}
-    );
-</script>
-<script>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/img/mobile_coding_dojo1.jpg" class="img-responsive">
+            </div>
+            <div class="col-sm-4">
+                <img src="/img/mobile_coding_dojo2.jpg" class="img-responsive">
+            </div>
+            <div class="col-sm-4">
+                <img src="/img/mobile_coding_dojo3.jpg" class="img-responsive">
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+
     function get_date_string_format(startDate, endDate) {
-        var month_names = new Array("janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre");
-        var day_names = new Array("Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi");
+        var month_names = ["janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre"];
+        var day_names = ["Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"];
         var date = startDate.getDate();
         var day = day_names[startDate.getDay()];
         var month = month_names[startDate.getMonth()]; //Months are zero based
         var year = startDate.getFullYear();
         return day + " " + date + " " + month + " " + year
-                + " de " + startDate.getHours() +"h"+startDate.getMinutes()
-                + " à " + endDate.getHours() +"h"+endDate.getMinutes();
+                + " de " + startDate.getHours() + "h" + startDate.getMinutes()
+                + " à " + endDate.getHours() + "h" + endDate.getMinutes();
     }
 
     function get_url(links) {
         var url = '';
-        for(var i= 0; i < links.length; i++){
-            if (links[i].type == "text/html"){
+        for (var i = 0; i < links.length; i++) {
+            if (links[i].type == "text/html") {
                 url = links[i].href + '&ctz=Europe/Paris';
             }
         }
         return url;
     }
 
-    $.ajax({
-        type: 'GET',
-        url: 'http://www.google.com/calendar/feeds/emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com/public/full?alt=json&orderby=starttime&max-results=1&singleevents=true&sortorder=ascending&futureevents=true',
-        dataType: 'json',
-        success: function(data) {
-            var event = data.feed.entry[0];
-            var title = event.title.$t;
-            var startTime = new Date(event.gd$when[0].startTime);
-            var endTime = new Date(event.gd$when[0].endTime);
-            var date_string = get_date_string_format(startTime, endTime);
-            var link = get_url(event.link);
+    function cacherVitrine() {
+        var el = document.getElementById('vitrine');
+        el.style.display = 'none';
+    }
 
-            $('#futur_event').text("Prochain évènement: " + title + ", le " + date_string);
-            $("#futur_event_url").attr("href", link);
-            $('#alert_container').css("display", "block");
-        },
-        error: function() {
-            console.log('Error loading Okiwi Google Agenda');
+    function dessinerVitrine(lienGoogleCalendar, titre, date) {
+
+        var lien = document.getElementById('event_link');
+        lien.href = lienGoogleCalendar;
+        lien.style.display = 'block';
+
+        var iconeChargement = document.getElementById('icone-chargement');
+        iconeChargement.style.display = 'none';
+
+        var message = document.getElementById('message');
+        message.textContent = titre + ", le " + date;
+    }
+
+    request = new XMLHttpRequest;
+    request.open('GET', 'http://www.google.com/calendar/feeds/emrdkvvu6iuqkp6g2etjp5295g@group.calendar.google.com/public/full?alt=json&orderby=starttime&max-results=1&singleevents=true&sortorder=ascending&futureevents=true', true);
+
+    request.onload = function () {
+        if (request.status >= 200 && request.status < 400) {
+            var donnees = JSON.parse(request.responseText);
+            var evenement = donnees.feed.entry[0];
+            var titre = evenement.title.$t;
+            var dateDebut = new Date(evenement.gd$when[0].startTime);
+            var dateFin = new Date(evenement.gd$when[0].endTime);
+            var date = get_date_string_format(dateDebut, dateFin);
+            var lien = get_url(evenement.link);
+            dessinerVitrine(lien, titre, date);
+        } else {
+            cacherVitrine();
         }
-    });
-</script>
+    };
 
-</html>
+    request.onerror = function () {
+        cacherVitrine();
+    };
+
+    request.send();
+</script>
