correction orthographique, beau boulot pour le nouveau site :)

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ title: Okiwi
                 <h3><i class="fa fa-thumbs-up fa-lg"></i> Bonnes pratiques</h3>
 
                 <p>
-                    Les <a href="http://fr.wikibooks.org/wiki/Programmation_XP_Pratiques"><b>bonnes practiques</b></a>
+                    Les <a href="http://fr.wikibooks.org/wiki/Programmation_XP_Pratiques"><b>bonnes pratiques</b></a>
                     de programmation que l'on respecte sont en outre le TDD, les principes <a
                         href="http://philippe.developpez.com/articles/SOLIDdotNet/">SOLID</a> et <span
                         title="Don't Repeat Yourself">DRY</span> et la programmation en binôme.
