FIX espaces insécables devant les doubles ponctuations.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Okiwi
 <div id="vitrine" class="row">
     <div class="col-lg-12">
         <div class="alert alert-success">
-            <strong><i class="fa fa-bullhorn fa-lg"></i> Prochain évènement:</strong><br/>
+            <strong><i class="fa fa-bullhorn fa-lg"></i> Prochain évènement&nbsp;:</strong><br/>
             <i id="icone-chargement" class="fa fa-spinner fa-spin"></i>
             <span id="message"></span>
             <br/><a id="event_link">plus d'information</a>
@@ -36,14 +36,14 @@ title: Okiwi
             <div class="col-sm-12">
 
                 <div class="page-header">
-                    <h1>Qu'est ce que Okiwi?</h1>
+                    <h1>Qu'est ce que Okiwi&nbsp;?</h1>
                 </div>
 
                 <p>Okiwi est une communauté ouverte de praticiens en informatique située à Bordeaux. Ouverte parce
                     que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce
                     que chacun y apportera.</p>
 
-                <p>Nous organisons entre autre: </p>
+                <p>Nous organisons entre autre&nbsp;: </p>
             </div>
         </div>
         <div class="row">
@@ -61,7 +61,7 @@ title: Okiwi
 
                 <p>
                     Quoi de mieux qu'une bière pour discuter des sujets qui nous
-                    passionne ? Une fois par mois, on se retrouve autour d'une bière sur Bordeaux.
+                    passionne&nbsp;? Une fois par mois, on se retrouve autour d'une bière sur Bordeaux.
                 </p>
             </div>
         </div>
@@ -84,7 +84,7 @@ title: Okiwi
                     Le <a href="http://globalday.coderetreat.org/">Global day of code retreat</a> est une journée durant laquelle des développeurs se
                     concentre sur
                     les fondamentaux du développement et du design logiciel. Okiwi est l'organisateur officiel de
-                    l'édition Bordelaise du Global Day of Code retreat depuis maintenant 3 ans !
+                    l'édition Bordelaise du Global Day of Code retreat depuis maintenant 3 ans&nbsp;!
                 </p>
 
             </div>
@@ -95,7 +95,7 @@ title: Okiwi
 
                 <p>
                     Des ateliers divers et variés, sur l'agilité, la communication, ... . Vous voulez organiser un
-                    atelier? Proposer l'idée sur les <a href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">canaux de discussions Okiwi</a>
+                    atelier&nbsp;? Proposer l'idée sur les <a href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">canaux de discussions Okiwi</a>
                 </p>
 
             </div>
@@ -106,7 +106,7 @@ title: Okiwi
                     Le Geek Camp week end est une rencontre entre informaticiens. Présentations, lightning talks,
                     séances de code, discussions, bières et barbecues étaient au programme de l'édition 2013 du Geek
                     Camp
-                    Week End !
+                    Week End&nbsp;!
                 </p>
 
             </div>
@@ -127,7 +127,7 @@ title: Okiwi
             </p>
             <img src="/img/coding_dojo_small.jpg" id="thumbnail-coding-dojo">
 
-            <h2>Des questions ?</h2>
+            <h2>Des questions&nbsp;?</h2>
 
             <p><a href="mailto:contact@okiwi.org">contact@okiwi.org</a>
                 <br/>
@@ -141,15 +141,15 @@ title: Okiwi
             <div class="col-lg-12">
 
                 <div class="page-header">
-                    <h1 id="coding-dojo">Qu'est ce qu'un Coding Dojo?</h1>
+                    <h1 id="coding-dojo">Qu'est ce qu'un Coding Dojo&nbsp;?</h1>
                 </div>
 
                 <p>Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeurs
                     améliorent leurs
                     compétences en programmation.
-                    Le principe est simple: on prend un exercice de programmation simple, on choisit un langage, et on
+                    Le principe est simple&nbsp;: on prend un exercice de programmation simple, on choisit un langage, et on
                     essaie de coder
-                    une solution en respectant les 4 règles du design simple de Kent Beck :
+                    une solution en respectant les 4 règles du design simple de Kent Beck&nbsp;:
                 </p>
                 <ul>
                     <li>Passer tous les tests</li>
