FIX y'a pas que la bière dans la vie... ;) et suppression de la répétition

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ title: Okiwi
                 <h3><i class="fa fa-beer fa-lg"></i> Apéros</h3>
 
                 <p>
-                    Quoi de mieux qu'une bière pour discuter des sujets qui nous
-                    passionne&nbsp;? Une fois par mois, on se retrouve autour d'une bière sur Bordeaux.
+                    Quoi de mieux qu'un bon verre pour discuter des sujets qui nous
+                    passionne&nbsp;? Une fois par mois, on se retrouve pour l'apéro sur Bordeaux.
                 </p>
             </div>
         </div>
