FIX quelques typos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ title: Okiwi
 
                 <p>
                     Quoi de mieux qu'un bon verre pour discuter des sujets qui nous
-                    passionne&nbsp;? Une fois par mois, on se retrouve pour l'apéro sur Bordeaux.
+                    passionnent&nbsp;? Une fois par mois, on se retrouve pour l'apéro sur Bordeaux.
                 </p>
             </div>
         </div>
@@ -82,7 +82,7 @@ title: Okiwi
 
                 <p>
                     Le <a href="http://globalday.coderetreat.org/">Global day of code retreat</a> est une journée durant laquelle des développeurs se
-                    concentre sur
+                    concentrent sur
                     les fondamentaux du développement et du design logiciel. Okiwi est l'organisateur officiel de
                     l'édition Bordelaise du Global Day of Code retreat depuis maintenant 3 ans&nbsp;!
                 </p>
@@ -95,7 +95,7 @@ title: Okiwi
 
                 <p>
                     Des ateliers divers et variés, sur l'agilité, la communication, ... . Vous voulez organiser un
-                    atelier&nbsp;? Proposer l'idée sur les <a href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">canaux de discussions Okiwi</a>
+                    atelier&nbsp;? Proposez l'idée sur les <a href="https://groups.google.com/forum/?hl=fr&amp;fromgroups#!forum/okiwi">canaux de discussions Okiwi</a>.
                 </p>
 
             </div>
@@ -104,7 +104,7 @@ title: Okiwi
 
                 <p>
                     Le Geek Camp week end est une rencontre entre informaticiens. Présentations, lightning talks,
-                    séances de code, discussions, bières et barbecues étaient au programme de l'édition 2013 du Geek
+                    séances de code, discussions, vin, bières et barbecues étaient au programme de l'édition 2013 du Geek
                     Camp
                     Week End&nbsp;!
                 </p>
