FIX syntaxe de la liste

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@ title: Okiwi
                     une solution en respectant les 4 règles du design simple de Kent Beck&nbsp;:
                 </p>
                 <ul>
-                    <li>Passer tous les tests</li>
-                    <li>Aucune duplication de code</li>
-                    <li>Révéler les intentions par le code, être très attentif au nommage</li>
-                    <li>Réduire le nombre de classes et de méthodes</li>
+                    <li>passer tous les tests&nbsp;;</li>
+                    <li>aucune duplication de code&nbsp;;</li>
+                    <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
+                    <li>réduire le nombre de classes et de méthodes&nbsp;;</li>
                 </ul>
             </div>
         </div>
