--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ title: Okiwi
                     de programmation avec une problématique spécifique à résoudre.
                     Souvent assez simple au début, ils sont plus difficiles à terminer.
                     <br>
-                    Chacun des katas effectués par Okiwi sont disponible sur <a
+                    Chacun des katas effectués par Okiwi sont malheureusement disponibles sur <a
                             href="https://github.com/okiwi">github</a>.
                 </p>
 
