ADD référence au soutien de l'association agile france pour le     Geek Camp week end.

--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@ title: Okiwi
                 <h3>Geek Camp week end</h3>
 
                 <p>
-                    Le Geek Camp week end est une rencontre entre informaticiens. Présentations, lightning talks,
-                    séances de code, discussions, vin, bières et barbecues étaient au programme de l'édition 2013 du Geek
-                    Camp
-                    Week End&nbsp;!
+                    Le Geek Camp week end est une rencontre entre informaticiens. 
+                    L'édition 2013 du Geek Camp week end a été organisé avec le bienveillant soutien
+                    de l'association <a href="http://agile-france.org/">agile france</a>.
+                    Présentations, lightning talks,
+                    séances de code, discussions, vin, bières et barbecues étaient au programme de 
+                    cette édition mémorable&nbsp;!
                 </p>
 
             </div>
