FIX syntaxe liste.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ title: Okiwi
                     <li>passer tous les tests&nbsp;;</li>
                     <li>aucune duplication de code&nbsp;;</li>
                     <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
-                    <li>réduire le nombre de classes et de méthodes&nbsp;;</li>
+                    <li>réduire le nombre de classes et de méthodes.</li>
                 </ul>
             </div>
         </div>
