--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ title: Okiwi
                 <h3>L'Agile Tour Bordeaux</h3>
 
                 <p>
-                    <a href="http://agiletourbordeaux.okiwi.org/" target="_blank">L'Agile Tour Bordeaux</a> est une étape de <a href="http://agiletour.org" target="_blank">l'Agile Tour</a>, une série
+                    <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est une étape de <a href="http://agiletour.org" target="_blank">l'Agile Tour</a>, une série
                     d’événements à but non lucratif,
                     qui vise principalement à promouvoir massivement l'Agilité. Okiwi organise depuis maintenant 5
                     ans l'Agile Tour Bordeaux.
