--- a/dons_et_cotisations/index.html
+++ b/dons_et_cotisations/index.html
@@ -40,7 +40,8 @@ title: Dons et cotisations
         <address>
             <strong>Association Okiwi</strong><br>
             34 Rue de Preignac <br>
-            33800 Bordeaux
+            33800 Bordeaux<br>
+            Siret : 799 611 926 00012
         </address>
 
         <h2>Faire un don</h2>
