--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -1,14 +1,35 @@
 ---
 layout: default
-title: Evénements Okiwi
+title: Geek Camp 2014 - Evénements Okiwi
 ---
 <div class="row">
-    <div class="col-lg-12 text-center">
-        <div class="">
-            <h2>Geek Camp 2014</h2>
-
-            <p>Le week end du 5, 6 et 7 séptembre à Ruffiac</p>
-
+    <div class="col-lg-12">
+        <div class="page-header">
+            <h1>Geek Camp 2014</h1>
+            <h2>5, 6 et 7 septembre à Ruffiac 47700</h2>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
+                <ul>Au programme:
+                    <li>il n'y a pas de programme prédéfini</li>
+                    <li>environnement collaboratif</li>
+                    <li>partage de connaissances</li>
+                    <li>du code, de la technique, du fun</li>
+                    <li>grillades et sorties campagnardes</li>
+                    <li>dormir à la belle étoile</li>
+                    <li>entrée gratuite mais limitée (30 max)</li>
+                </ul>
+                <div>
+                <a href="https://www.yuticket.com/association-okiwi/c3505661-9ae9-4f09-96f5-62dd46e4f4c4-geek-camp-week-end-2014.html">Inscriptions sont ouvertes</a>
+                </div>
+                <div>
+                    <img src="/img/GeekCamp-Ruffiac-2014-web-medium.png" alt="Geek Camp flyer" />
+                </div>    
+                <div>
+                    avec le soutien de l'association Agile France <img src="/img/agile_france_assoc.png" alt="Association Agile France" width="71" height="69" />
+                </div>
+            </div>
         </div>
     </div>
 </div>
