ajout well autour de lien inscriptions

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -20,8 +20,8 @@ title: Geek Camp 2014 - Evénements Okiwi
                     <li>dormir à la belle étoile</li>
                     <li>entrée gratuite mais limitée (30 max)</li>
                 </ul>
-                <div>
-                <a href="https://www.yuticket.com/association-okiwi/c3505661-9ae9-4f09-96f5-62dd46e4f4c4-geek-camp-week-end-2014.html">Inscriptions sont ouvertes</a>
+                <div class="well">
+                    <a href="https://www.yuticket.com/association-okiwi/c3505661-9ae9-4f09-96f5-62dd46e4f4c4-geek-camp-week-end-2014.html">Inscriptions sont ouvertes</a>
                 </div>
                 <div>
                     <img src="/img/GeekCamp-Ruffiac-2014-web-medium.png" alt="Geek Camp flyer" />
