ajoute de l'affiche imprimable

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -29,6 +29,9 @@ title: Geek Camp 2014 - Evénements Okiwi
                 <div>
                     avec le soutien de l'association Agile France <img src="/img/agile_france_assoc.png" alt="Association Agile France" width="71" height="69" />
                 </div>
+                <div class="well">
+                    <a href="/img/GeekCamp-Ruffiac-2014.png">Affiche imprimable</a>
+                </div>
             </div>
         </div>
     </div>
