--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ title: Okiwi
                     Présentations, lightning talks,
                     séances de code, discussions, vin, bières et barbecues étaient au programme de 
                     cette édition mémorable&nbsp;!
+                    <a href="/geek-camp/">Participez à la seconde édition!!! 5,6,7 septembre 2014</a>
                 </p>
 
             </div>
