--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@ title: Okiwi
 
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><i class="fa fa-puzzle-piece fa-lg"></i> TTFX</h3>
+
+                <p>
+                    Les TTFX sont des manifestions digitales prenant la forme de conférences, ateliers, ou hackathon.
+                    Elles sont pilotées par la communauté qui est libre de choisir les sujets abordés.
+                    Les conférences ont lieux tout les 3 mois, les ateliers sur demande, et <a href="http:www.codeofwar.net">code of war</a> tous les ans.
+                    <a href="http:www.ttfx.fr">Participez !</a>.
+                </p>
+
+            </div>
+            <div class="col-sm-6">
+
+            </div>
+        </div>
     </div>
 </div>
 
