--- a/dons_et_cotisations/index.html
+++ b/dons_et_cotisations/index.html
@@ -39,7 +39,9 @@ title: Dons et cotisations
         <p>ou par courrier à:</p>
         <address>
             <strong>Association Okiwi</strong><br>
-            34 Rue de Preignac <br>
+            chez monsieur Bousquié<br>
+            3 rue léon jouhaux <br>
+            Bat 4 apt 118<br>
             33800 Bordeaux<br>
             Siret : 799 611 926 00012
         </address>
