Mise à jour des status
Mise à jour des status validés lors de l'assemblée générale 2015

--- a/association/index.html
+++ b/association/index.html
@@ -76,8 +76,8 @@ title: L'association
             <br>
             La durée de l’association est illimitée.
             <br>
-            Le siège de l’association est fixé à Bordeaux. Le conseil d’administration a le choix de l’immeuble où le
-            siège est établi et peut le transférer dans la même ville par simple décision.
+            Le siège de l’association est fixé en Gironde. Le conseil d’administration a le choix de l’immeuble où le
+            siège est établi et peut le transférer dans le même département par simple décision.
         </p>
 
         <h2>Article II – Les buts</h2>
@@ -112,13 +112,13 @@ title: L'association
             <li>membre bienfaiteur: personne cotisant pour soutenir les activités de l’association dans son ensemble ou
                 une action particulière de celle-ci
             </li>
-            <li>membre salarié(d’honneur, actif, ou adhérent): personne étant employé au sein de
-                l’association(intermittent ou permanent en CDD ou CDI) et ayant par ailleurs une activité militante au
+            <li>membre salarié (d’honneur, actif, ou adhérent): personne étant employé au sein de
+                l’association (intermittent ou permanent en CDD ou CDI) et ayant par ailleurs une activité militante au
                 sein de la structure
             </li>
         </ul>
 
-        Qualité et spécificité des membres: pour être membre il faut être majeur(ou fournir une autorisation écrite des
+        Qualité et spécificité des membres: pour être membre il faut être majeur (ou fournir une autorisation écrite des
         parents), jouir de ses droits civiques, être présenté par au moins un membre de l’association et agréé par le
         conseil d’administration.
         <br>
@@ -225,7 +225,7 @@ title: L'association
         <p>
             L’assemblée générale de l’association comprend les membres actifs, fondateurs, et d’honneurs.
             La présence de la moitié ds membres actifs est nécessaire pour la validité des délibérations.
-            Elle se réunit 2 fois par an et chaque fois qu’elle est convoquée par le conseil d’administration ou sur la
+            Elle se réunit une fois par an et chaque fois qu’elle est convoquée par le conseil d’administration ou sur la
             demande du quart au moins de ses membres.
             <br>
             Les convocations sont envoyées au moins quinze jours à l’avance et indique l’ordre du jour.
