--- a/dons_et_cotisations/index.html
+++ b/dons_et_cotisations/index.html
@@ -40,9 +40,9 @@ title: Dons et cotisations
         <address>
             <strong>Association Okiwi</strong><br>
             chez monsieur Bousquié<br>
-            3 rue léon jouhaux <br>
-            Bat 4 apt 118<br>
-            33800 Bordeaux<br>
+            1 rue Raoul Ponchon<br>
+            Bat 7 appt 49<br>
+            33700 Mérignac<br>
             Siret : 799 611 926 00012
         </address>
 
