--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@ title: Okiwi
 
                 <p>
                     Le Geek Camp week end est une rencontre entre informaticiens. 
-                    L'édition 2013 du Geek Camp week end a été organisé avec le bienveillant soutien
+                    L'édition 2013 et 2014 du Geek Camp week end ont été organisées avec le bienveillant soutien
                     de l'association <a href="http://agile-france.org/">agile france</a>.
                     Présentations, lightning talks,
                     séances de code, discussions, vin, bières et barbecues étaient au programme de 
-                    cette édition mémorable&nbsp;!
-                    <a href="/geek-camp/">Participez à la seconde édition!!! 5,6,7 septembre 2014</a>
+                    ces éditions mémorables&nbsp;!
                 </p>
 
             </div>
