--- a/dons_et_cotisations/index.html
+++ b/dons_et_cotisations/index.html
@@ -89,7 +89,7 @@ title: Dons et cotisations
                     <li>l'assurance responsabilité civile qui nous permet d'organiser autant d'évènements que nous
                         souhaitons
                     </li>
-                    <li>le nom de domaine okiwi.org</li>
+                    <li>le nom de domaine <a href="http://okiwi.org/">okiwi.org</a> et <a href="http://agiletourbordeaux.fr/">agiletourbordeaux.fr</a></li>
                     <li>le serveur mail</li>
                 </ul>
                 <p>Ils permettent aussi à Okiwi de rendre l'ensemble des évènements gratuits ! </p>
