MaJ pour Geek Camp

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -5,8 +5,8 @@ title: Geek Camp 2014 - Evénements Okiwi
 <div class="row">
     <div class="col-lg-12">
         <div class="page-header">
-            <h1>Geek Camp 2014</h1>
-            <h2>5, 6 et 7 septembre à Ruffiac 47700</h2>
+            <h1>Geek Camp 2015</h1>
+            <h2>18, 19 et 20 septembre à Ruffiac 47700</h2>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
@@ -18,19 +18,12 @@ title: Geek Camp 2014 - Evénements Okiwi
                     <li>du code, de la technique, du fun</li>
                     <li>grillades et sorties campagnardes</li>
                     <li>dormir à la belle étoile</li>
-                    <li>entrée gratuite mais limitée (30 max)</li>
                 </ul>
                 <div class="well">
-                    <a href="https://www.yuticket.com/association-okiwi/c3505661-9ae9-4f09-96f5-62dd46e4f4c4-geek-camp-week-end-2014.html">Inscriptions sont ouvertes</a>
+                    <a href="https://okiwi.github.io/gcwe/#/">Inscriptions sont ouvertes</a>
                 </div>
                 <div>
                     <img src="/img/GeekCamp-Ruffiac-2014-web-medium.png" alt="Geek Camp flyer" />
-                </div>    
-                <div>
-                    avec le soutien de l'association Agile France <img src="/img/agile_france_assoc.png" alt="Association Agile France" width="71" height="69" />
-                </div>
-                <div class="well">
-                    <a href="/img/GeekCamp-Ruffiac-2014.png">Affiche imprimable</a>
                 </div>
             </div>
         </div>
