--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@ title: Okiwi
 
             </div>
             <div class="col-sm-6">
-                <h3>Geek Camp week end</h3>
+                <h3>Geek Camp</h3>
 
                 <p>
-                    Le Geek Camp week end est une rencontre entre informaticiens. 
-                    L'édition 2013 et 2014 du Geek Camp week end ont été organisées avec le bienveillant soutien
-                    de l'association <a href="http://agile-france.org/">agile france</a>.
+                    Le <a href="/geek-camp">Geek Camp</a> est une rencontre entre informaticiens. 
+                    Il aura lieu cette année le weekend du 18,19 et 20 séptembre.
                     Présentations, lightning talks,
                     séances de code, discussions, vin, bières et barbecues étaient au programme de 
                     ces éditions mémorables&nbsp;!
